# ai-driven-semantic-log-anomaly-detection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py  sonar-project.properties
.github/: SECRETS_SETUP.md  dependabot.yml
.github/workflows/: container-scan.yml  format.yml  lint.yml  snyk.yml  sonarqube.yml  test.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: agent.py  logs.py
backend/app/db/: postgres.py  session.py
backend/app/models/: __init__.py  log.py
backend/app/observability/: metrics.py  otel.py
backend/app/services/: __init__.py  agent_executor_service.py  agent_tools.py  anomaly_detection_service.py  clustering_service.py  embedding_service.py  ingestion_service.py  kafka_service.py  llm_reasoning_service.py  log_aggregator.py  metadata_extractor.py  pii_service.py  qdrant_service.py  storage_service.py
backend/scripts/: test_all_endpoints.py  verify_system.py
backend/tests/: test_config.py
backend/tests/integration/: test_agent_endpoints.py  test_ingestion_flow.py
backend/tests/unit/: test_agent_executor_service.py  test_agent_tools.py  test_anomaly_detection_service.py  test_clustering_service.py  test_embedding_service.py  test_kafka_service.py  test_llm_reasoning_service.py  test_pii_service.py  test_qdrant_service.py
dashboard/nextjs-app/: .env.example  .sentryclirc  instrumentation.ts  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
dashboard/nextjs-app/app/: _error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
dashboard/nextjs-app/app/agent/: page.tsx
dashboard/nextjs-app/app/anomalies/: page.tsx
dashboard/nextjs-app/app/api/sentry-example/: route.ts
dashboard/nextjs-app/app/clustering/: page.tsx
dashboard/nextjs-app/app/logs/: page.tsx
dashboard/nextjs-app/app/search/: page.tsx
dashboard/nextjs-app/app/sentry-example-page/: page.tsx
dashboard/nextjs-app/app/settings/: page.tsx
dashboard/nextjs-app/components/: cluster-viz.tsx
dashboard/nextjs-app/components/layout/: app-shell.tsx  header.tsx  sidebar.tsx
dashboard/nextjs-app/components/log-explorer/: facet-sidebar.tsx  log-feed.tsx  log-row.tsx  volume-chart.tsx
dashboard/nextjs-app/components/ui/: button.tsx  connection-status.tsx  error-boundary.tsx  error-state.test.tsx  error-state.tsx  loading.tsx  theme-toggle.tsx
dashboard/nextjs-app/lib/: api-response-transformation.test.ts  api.test.ts  api.ts  config.ts  cors-configuration.test.ts  data-reactivity.test.ts  data-rendering-consistency.test.ts  environment-configuration.test.ts  error-state-handling.test.ts
dashboard/nextjs-app/types/: log.ts
docs/: presidio-configuration.md
infra/: docker-compose.yml
infra/docker/: backend.Dockerfile  dashboard.Dockerfile
infra/doppler/: config.yaml
infra/grafana/datasources/: prometheus.yml
infra/ingestion/fluentbit/: fluent-bit.conf  parsers.conf
infra/kafka/: init-topics.sh
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yml
ingestion/fluentbit/: fluent-bit.conf  parsers.conf
scripts/: setup-doppler.sh
