[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI-driven semantic log anomaly detection"
requires-python = ">=3.13"
# Dependencies are inherited from the root workspace project
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

